--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ composer.phar
 !/app/template/admin
 !/app/template/default
 !/app/template/user_data
-
+/app/proxy/entity/*
+!/app/proxy/entity/.gitkeep
 /html/plugin/*
 !/html/plugin/.gitkeep
 /html/install/temp/*
